ShoppingCart nesten completed. Litt mer.

--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -39,3 +39,8 @@
         <button type="button" id="{{category}}" class="btn btn-default" onclick="hideUnwanted(this.id)">{{category}}</button>
 </script>
 
+<script type="text/javascript">
+    window.onload = function () {
+        createShoppingCart();
+    }
+</script>
