--- a/Kaffeplaneten/Kaffeplaneten/Views/User/editAccountView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/editAccountView.cshtml
@@ -14,6 +14,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
+    @Html.Action("HeaderAndMenuBar", "Layout")
 
     <fieldset>
         <legend>Endre opplysninger</legend>
