--- a/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
+    @Html.Action("HeaderAndMenuBar", "Layout")
     <fieldset>
         <legend>Brukerregistrering</legend>
 
