--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -1,9 +1,10 @@
-﻿@model List<String>
+﻿@model List<Kaffeplaneten.Models.ProductModel>
 @{
     ViewBag.Title = "Products";
+
 }
 
-<body onload="getAllProductsInitial()">
+
     <div class="btn-group" role="group" aria-label="Kategori">
             <button type="button" id="Arabica" class="btn btn-default" onclick="hideUnwanted(this.id)">Arabica</button>
             <button type="button" id="Robusta" class="btn btn-default" onclick="hideUnwanted(this.id)">Robusta</button>
@@ -11,29 +12,42 @@
             <button type="button" id="Kaffe" class="btn btn-default" onclick="hideUnwanted(this.id)">Kaffe</button>
             <button type="button" id="test" class="btn btn-default" onclick="hideUnwanted(this.id)">Hide</button>
         </div>
+    <dv id="buttonCanvas">
+        knappeCanvas
+    </dv>
 
     <div id="productCanvas">
         Har du produkter i databasen?
         Siden er loadet, men ingen produkter er hentet ut.
     </div>
 
-    <script id="productTemplate" type="text/template">
-        <div class="cat-{{category}}">
-            <div id="template" class="col-sm-6 col-md-6">
-                <div class="thumbnail">
-                    <img img src="../../Content/img/{{imageURL}}" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
-                    <div class="caption">
-                        <h3 id="pName">{{productName}}</h3>
-                        <h2>{{price}},-</h2>
-                        <p id="pDes">{{description}}</p>
-                        <div id="{{productID}}"></div>
-                    </div>
+    <div id="testCanvas">
+        TESTCANVAS
+    </div>
 
+    <script id="testTemplate" type="text/template">
+        <h2>Navn: {{productName}}</h2>
+    </script>
+
+        @foreach(var produkt in Model)  
+       {
+            <div class="cat-{{category}}">
+                <div id="template" class="col-sm-6 col-md-6">
+                    <div class="thumbnail">
+                        <img img src="../../Content/img/@Html.DisplayFor(model => produkt.imageURL)" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
+                        <div class="caption">
+                            <h3 id="pName">@Html.DisplayFor(model => produkt.productName)</h3>
+                            <h2>@Html.DisplayFor(model => produkt.price)</h2>
+                            <p id="pDes">@Html.DisplayFor(model => produkt.description)</p>
+                        </div>
+                       <p>@produkt.productID</p>
+                        @Html.ActionLink("Info", "ProductDetails", "Product", new { id = produkt.productID },null)
+                    </div>
                 </div>
             </div>
-        </div>
-    </script>
-</body>
+       }
+
+
 
 <script id="categoryTemplate" type="text/template">
         <button type="button" id="{{category}}" class="btn btn-default" onclick="hideUnwanted(this.id)">{{category}}</button>
