--- a/Kaffeplaneten/Kaffeplaneten/Views/Security/Loginview.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Security/Loginview.cshtml
@@ -36,7 +36,7 @@
 
     </fieldset>
 }
-                @if (ViewBag.LoggedOn)
+                @if (ViewBag.LoggedOn != null && ViewBag.LoggedOn)
                 {
                     <div id="showUser">
                         <p style="color:blue">Pålogget</p>
