Fikset noen småbugs. Lagt til const verdier for alle Session accesser, dette sikrer mot skirvefeil i stringen. Mange metoder som er oppdatert grunnet dette. Ordrer går nå feilfritt fra shoppingcart og ned i databasen, mangler kobling fra kjøp knapp i produkt til carten.

--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/confirmOrderView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/confirmOrderView.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "confirmOrderView";
 }
 @Html.ValidationSummary(true)
+@Html.Action("HeaderAndMenuBar", "Layout")
 
 <h2>Bekreft Ordre</h2>
 
