Endre AddToCart til å KUN ta ProductModel og ikke quantity. Laget egen quantity editing metode for å få Ajax til å automatisk endre.

--- a/Kaffeplaneten/Kaffeplaneten/Views/ShoppingCart/ShoppingCartView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/ShoppingCart/ShoppingCartView.cshtml
@@ -60,9 +60,19 @@
 </fieldset>
 
 <script type="text/javascript">
-         function calculateTotalCall {
-            $("#categoryCanvas").load("@Url.Content("/Product/ProductCategories")");
-            $("#categoryCanvas").show();
+    function updateQuantity()
+    {
+        $(onchange).ajax({
+            url:
+            "",
+            data:
+            {
+                sjanger:
+                $("#IdListe").val()
+            }, success:
+            function (retur) {
+                $("#BokerListe").html(retur);
+            }
         });
-
+    }
 </script>
