Jobber med å sende produktobjekt til handlekurv

--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
@@ -12,6 +12,8 @@
                 </div>
                 <p>@produkt.productID</p>
                 @Html.ActionLink("Info", "ProductDetails", "Product", new { id = produkt.productID }, null)
+                @Html.ActionLink("Legg i handlekurv", "addToCart", "Order", new { id = produkt  }, null)
+
             </div>
         </div>
     </div>
