Remove fra Cart fungerer nå nydelig.

--- a/Kaffeplaneten/Kaffeplaneten/Views/ShoppingCart/ShoppingCartView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/ShoppingCart/ShoppingCartView.cshtml
@@ -100,13 +100,14 @@
 
     function removeItem(data){
         $.ajax({
-            url: "/ShoppingCart/removeItem",
+            url: "/ShoppingCart/removeFromCart",
             type: "GET",
             data: { productToBeRemoved: data }
         })
         .done(function () {
             alert("FIXED");
             $("#entireProduct_" + data).remove();
+            getTotal();
         });
     };
 </script>
