Tulla rundt med Bootstrap. Fikset bug i cart.

--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/confirmOrderView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/confirmOrderView.cshtml
@@ -5,16 +5,17 @@
 @Html.ValidationSummary(true)
 @Html.Action("HeaderAndMenuBar", "Layout")
 
-<h2>Bekreft Ordre</h2>
+<div class="col-lg-3">
+    <h2>Bekreft Ordre</h2>
 
-@Html.Partial("OrderView", Model)
-
-<h3>
-    Kundeopplysninger
-</h3>
-@((Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel).customer
-@Html.Partial("customerView", (Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel)
-
-
-@Html.ActionLink("Avbryt", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-danger" })
-@Html.ActionLink("Bekreft ordre", "receiptView", "Order", new { area = "" }, new { @class = "btn btn-success" })
+    @Html.Partial("OrderView", Model)
+    @Html.ActionLink("Avbryt", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-danger" })
+    @Html.ActionLink("Bekreft ordre", "receiptView", "Order", new { area = "" }, new { @class = "btn btn-success" })
+</div>
+<div class="col-lg-5">
+    <h3>
+        Kundeopplysninger
+    </h3>
+    @((Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel).customer
+    @Html.Partial("customerView", (Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel)
+</div>
