--- a/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
@@ -14,27 +14,38 @@
 
 <h2>Kaffeplaneten</h2>
 <header>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Kaffeplaneten</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    @if (ViewBag.Inlogged == true)
+                    {
+                        <li role="presentation" class="showAlways">@Html.ActionLink("Home", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li role="presentation" class="showAlways"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "ShoppingCart", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li role="presentation" id="showLoggedIn"> @Html.ActionLink("Kontoinstillinger", "accountView", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li role="presentation" id="showLoggedIn">@Html.ActionLink("Logg Ut", "LoggedOut", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
 
-    <ul class="nav nav-tabs">
-        @if (ViewBag.Inlogged == true)
-        {
-
-            <li role="presentation" class="showAlways">@Html.ActionLink("Home", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li role="presentation" class="showAlways"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "ShoppingCart", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li role="presentation" id="showLoggedIn"> @Html.ActionLink("Kontoinstillinger", "accountView", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li role="presentation" id="showLoggedIn">@Html.ActionLink("Logg Ut", "LoggedOut", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
-
-        }
-        else
-        {
-            <li role="presentation" class="showAlways">@Html.ActionLink("Home", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li role="presentation" class="showLoggedOut"> @Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li role="presentation" class="showAlways"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "ShoppingCart", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li role="presentation" id="showLoggedIn">@Html.ActionLink("Logg inn", "Loginview", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
-        }
-
-    </ul>
-
+                    }
+                    else
+                    {
+                        <li role="presentation" class="showAlways">@Html.ActionLink("Home", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li role="presentation" class="showLoggedOut"> @Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li role="presentation" class="showAlways"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "ShoppingCart", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li role="presentation" id="showLoggedIn">@Html.ActionLink("Logg inn", "Loginview", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    }
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
 
 
