Legg i cart knapp

--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -21,7 +21,7 @@
                         <p id="pDes">@Html.DisplayFor(model => produkt.description)</p>
                     </div>
                     <p>@produkt.category</p>
-                    @Html.ActionLink("Info", "ProductDetails", "Product",null, new { id = produkt.productID })
+                    @Html.ActionLink("Info", "ProductDetails", "Product", new { id = produkt.productID }, new { @class = "btn btn-default" })
                     <button type="button" id="@produkt.productID" class="btn btn-default" onclick="putInCart(@produkt.productID)">Legg i handlekurv</button>
 
                 </div>
@@ -29,6 +29,7 @@
         </div>
     }
     </div>
+
 
 
     <script type="text/javascript">
