--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<Kaffeplaneten.Models.ProductModel>
+
 @foreach (var produkt in Model)
 {
     <div class="@Html.DisplayFor(model => produkt.category)">
@@ -12,7 +13,7 @@
                 </div>
                 <p>@produkt.productID</p>
                 @Html.ActionLink("Info", "ProductDetails", "Product", new { id = produkt.productID }, null)
-                <button type="button" id="@produkt.productID" class="btn btn-default" onclick="putInCart(@produkt.productID)">Legg i handlekurv</button>
+                <button type="button" id="@produkt.productID" class="btn btn-default" onclick="putInCart(@produkt.productID,1)">Legg i handlekurv</button>
 
             </div>
         </div>
