Pshed masse Bootstrap stuff

--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/confirmOrderView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/confirmOrderView.cshtml
@@ -5,17 +5,25 @@
 @Html.ValidationSummary(true)
 @Html.Action("HeaderAndMenuBar", "Layout")
 
-<div class="col-lg-3">
-    <h2>Bekreft Ordre</h2>
+<div class="container">
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <h2>Bekreft Ordre</h2>
 
-    @Html.Partial("OrderView", Model)
-    @Html.ActionLink("Avbryt", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-danger" })
-    @Html.ActionLink("Bekreft ordre", "receiptView", "Order", new { area = "" }, new { @class = "btn btn-success" })
+                @Html.Partial("OrderView", Model)
+                @Html.ActionLink("Avbryt", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-danger" })
+                @Html.ActionLink("Bekreft ordre", "receiptView", "Order", new { area = "" }, new { @class = "btn btn-success" })
+            </div>
+            <div class="portfolio-item panel-body table-bordered">
+                <h3>
+                    Kundeopplysninger
+                </h3>
+                @((Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel).customer
+                @Html.Partial("customerView", (Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel)
+            </div>
+        </div>
+    </div>
 </div>
-<div class="col-lg-5">
-    <h3>
-        Kundeopplysninger
-    </h3>
-    @((Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel).customer
-    @Html.Partial("customerView", (Kaffeplaneten.Models.CustomerModel)ViewBag.customerModel)
-</div>
+
+   
