--- a/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Layout/HeaderAndMenuBar.cshtml
@@ -5,14 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Kaffeplaneten</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
-
-
-<h2>Kaffeplaneten</h2>
 <header>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -23,7 +20,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Kaffeplaneten</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -46,6 +42,7 @@
             </div>
         </div>
     </nav>
+    <img src="~/Content/img/Logo.png" class="img-thumbnail" />
 </header>
 
 
