--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -5,21 +5,14 @@
 
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
+
 <div class="jumbotron">
     <div class="container">
         <img class="img-responsive" src="../../Content/img/logo.png" />
     </div>
 </div>
 
-
-<div id="categoryBtns" class="btn-group" role="group" aria-label="Kategori">
-    <button type="button" id="Arabica" class="btn btn-default" onclick="getProductsInCat(this.id)">Arabica</button>
-    <button type="button" id="Robusta" class="btn btn-default" onclick="getProductsInCat(this.id)">Robusta</button>
-    <button type="button" id="Svensk" class="btn btn-default" onclick="getProductsInCat(this.id)">Svensk</button>
-    <button type="button" id="Deluxe" class="btn btn-default" onclick="getProductsInCat(this.id)">Deluxe</button>
-    <button type="button" id="Curry" class="btn btn-default" onclick="getProductsInCat(this.id)">Curry</button>
-</div>
-
+<div id="categoryCanvas">@Html.Action("ProductCategories", "Product")</div>
 <div id="productCanvas">Ingen produkter å vise! Finnes det produkter i databasen??</div>
 
 
