--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductCategories.cshtml
@@ -1,12 +1,9 @@
-﻿
-@model List<String>
+﻿@model Kaffeplaneten.Models.UserModel
 
-<div id="categoryTemplate" onchange="getUniqeCategories()">
-    
-    @foreach (var category in Model)
-    {
-        <div class="btn-group" role="group" aria-label="Kategori">
-            <button type="button" id="@category" class="btn btn-default" onclick="getProductsInCat(this.id)">@category</button>
-        </div>
-    }
+<div id="categoryBtns" class="btn-group" role="group" aria-label="Kategori">
+    <button type="button" id="Arabica" class="btn btn-default" onclick="getProductsInCat(this.id)">Arabica</button>
+    <button type="button" id="Robusta" class="btn btn-default" onclick="getProductsInCat(this.id)">Robusta</button>
+    <button type="button" id="Svensk" class="btn btn-default" onclick="getProductsInCat(this.id)">Svensk</button>
+    <button type="button" id="Deluxe" class="btn btn-default" onclick="getProductsInCat(this.id)">Deluxe</button>
+    <button type="button" id="Curry" class="btn btn-default" onclick="getProductsInCat(this.id)">Curry</button>
 </div>
