--- a/Kaffeplaneten/Kaffeplaneten/Views/Security/Loginview.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Security/Loginview.cshtml
@@ -11,30 +11,37 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     @Html.Action("HeaderAndMenuBar", "Layout")
-    <fieldset>
-        <div id="Loginpage">
-            <h3>Innlogging:</h3>
 
-                <div class="editor-label">
-                    @Html.LabelFor(userModel => userModel.username)
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(userModel => userModel.username)
-                    @Html.ValidationMessageFor(userModel => userModel.username)
+    <div class="container-fluid">
+        <fieldset>
+            <div class="row">
+                <div class="panel-body">
+                    <div class="col-md-offset-1">
+                        <h3>Innlogging:</h3>
+
+                        <div class="editor-label">
+                            @Html.LabelFor(userModel => userModel.username)
+                        </div>
+                        <div class="editor-field">
+                            @Html.EditorFor(userModel => userModel.username)
+                            @Html.ValidationMessageFor(userModel => userModel.username)
+                        </div>
+
+                        <div class="editor-label">
+                            @Html.LabelFor(userModel => userModel.password)
+                        </div>
+                        <div class="editor-field">
+                            @Html.PasswordFor(userModel => userModel.password)
+                            @Html.ValidationMessageFor(userModel => userModel.password)
+                        </div>
+                        <input type="submit" value="Logg inn" id="LogInButton" class="btn btn-success" />
+                    </div>
                 </div>
 
-                <div class="editor-label">
-                    @Html.LabelFor(userModel => userModel.password)
-                </div>
-                <div class="editor-field">
-                    @Html.PasswordFor(userModel => userModel.password)
-                    @Html.ValidationMessageFor(userModel => userModel.password)
-                </div>
-                <input type="submit" value="Logg inn" id="LogInButton" class="btn btn-success" />
-            
+            </div>
+
+        </fieldset>
         </div>
-
-    </fieldset>
 }
           
 
