Numberspinner lagt til

--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
         <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
         <script src="~/Scripts/mustache.js"></script>
         <script src="~/Scripts/JavascriptFunksjoner.js"></script>
+        <script src="~/Scripts/numberspinner.js"></script>
     
     </body>
 
