--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductDetails.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductDetails.cshtml
@@ -14,15 +14,32 @@
                 <h2>@Html.DisplayFor(Model => Model.price)</h2>
                 <p id="pDes">@Html.DisplayFor(Model => Model.description)</p>
             </div>
-            <form>
+            <div class="thumbnail">
 
-            </form>
-            <input id="quantity" type="number" data-placeholder="placeholder" class="placeholder-active" value="1"  />
+            <div class="input-group">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                        <div class="glyphicon glyphicon-minus"></div>
+                    </button>
+                </div>
+                <input id="quantity" type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]"><span class="glyphicon glyphicon-plus"></span></button>
+                </div>
+            </div>
             <button type="button" id="@Model.productID" class="btn btn-default" onclick="putInCart(@Model.productID )">Legg i handlekurv</button>
+            </div>
             
         </div>
     </div>
 </div>
+
+
+
+    
+
+
+
 
 
 
