--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/receiptView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/receiptView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Kaffeplaneten.Models.OrderModel
+﻿-@model Kaffeplaneten.Models.OrderModel
 
 @{
     ViewBag.Title = "receiptView";
@@ -6,7 +6,9 @@
 @Html.Action("HeaderAndMenuBar", "Layout")
 @Html.ValidationSummary(true)
 
-<h2>Kvittering</h2>
-@Html.Partial("OrderView")
+<div class="col-md-4 col-md-offset-4 well well-lg">
+    <h2>Kvittering</h2>
+    @Html.Partial("OrderView")
 
-@Html.ActionLink("Hjem", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Hjem", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-success" })
+</div>
