--- a/Kaffeplaneten/Kaffeplaneten/Views/ShoppingCart/ShoppingCartView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/ShoppingCart/ShoppingCartView.cshtml
@@ -7,6 +7,7 @@
 
 <fieldset>
     <div class="container">
+    @Html.ValidationSummary(true)
         <table id="cart" class="table table-hover table-condensed">
             <thead>
                 <tr>
