--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
         <title>@ViewBag.Title - Kaffeplaneten</title>
         <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
         <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="~/Content/theme.css" rel="stylesheet" type="text/css" />
         <script src="~/Scripts/modernizr-2.6.2.js"></script>
     </head>
 
